[project]
name = "aoc2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Isak Lindbeck"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "termcolor (>=3.2.0,<4.0.0)",
    "z3-solver (>=4.15.4.0,<5.0.0.0)",
]

[tool.poetry]
packages = [{include = "aoc2025", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
